Activacion y desactivacion de botones de busqueda segun BT este encendido o no

--- a/Bluethrough/app/src/main/res/values/strings.xml
+++ b/Bluethrough/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="encender">Encender</string>
     <string name="apagar">Apagar</string>
     <string name="buscar">Buscar Dispositivos</string>
+    <string name="emparejados">Mostrar Emparejados</string>
 </resources>
