--- a/Bluethrough/app/src/main/res/values/strings.xml
+++ b/Bluethrough/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="apagar">Apagar</string>
     <string name="buscar">Buscar Dispositivos</string>
     <string name="emparejados">Mostrar Emparejados</string>
+    <string name="debug">This is a debug screen</string>
 </resources>
