--- a/BluethroughV2/app/src/main/res/values/strings.xml
+++ b/BluethroughV2/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="desconectar">Desconectar</string>
     <string name="destinatario">Destinatario</string>
     <string name="establecer_destinatario">Establecer destinatario</string>
+    <string name="title_activity_alias">Alias</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
